@@ -1,3 +1,6 @@
+## 05-Feb-2023
+# Fixed capture beam collision with fighter (collision with sprite shissor wasn't accurate)
+
 ## 02-Feb-2023
 # Implemented on-screen scoring for bosses
 # Implemented on-screen scoring for cleared waves during challenge-stage
